# handyman

./: .dockerignore  .env.example  .env.production.example  .gitignore  Cargo.toml  DEPLOYMENT_ERRORS.md  DOCUMENTATION_COMPLETE.md  Dockerfile.production  LICENSE  Leptos.toml  Makefile  README.md  STRIPE_INTEGRATION.md  XFTRADESMAN Web Design Contract  (1).txt  add_documentation.md  build_error.txt  build_output.txt  clear_runs.ps1  clippy.toml  deploy.ps1  deployment_fix_plan.md  docker-compose.yml  fetch_logs.bat  fetch_logs.ps1  fly.toml  fly_deployment_plan.md  handyman-marketplace-business-plan.html  observability_telemetry_plan.md  package-lock.json  package.json  playwright.config.ts  reset.bat  search-engine-optimization-starter-guide.txt  start.bat  start_fly.sh  tailwind.config.js  test_deploy.bat  test_deploy.sh
.cargo/: config.toml
.githooks/: pre-commit
backend/: BACKEND.md  Cargo.toml  README.md  init_db.sh  schema.sql
backend/.cargo/: config.toml
backend/apps/api/: Cargo.toml
backend/apps/api/src/: config.rs  extractors.rs  main.rs  middleware.rs  validators.rs
backend/apps/api/src/web/: cache.rs  mod.rs  openapi.rs  routes_contact.rs  routes_health.rs  routes_payment.rs  routes_quote.rs  routes_seo.rs  routes_static.rs
backend/apps/api/src/web/handlers/: contact.rs  mod.rs  payment.rs  quote.rs  seo.rs  static_content.rs
backend/apps/api/tests/: api_tests.rs  integration_test.rs
backend/libs/lib-auth/: Cargo.toml
backend/libs/lib-auth/src/: lib.rs  pwd.rs  token.rs
backend/libs/lib-core/: Cargo.toml
backend/libs/lib-core/src/: cache.rs  config.rs  ctx.rs  email.rs  lib.rs  prelude.rs
backend/libs/lib-core/src/_dev_utils/: mod.rs
backend/libs/lib-core/src/model/: base.rs  booking.rs  contact.rs  customer.rs  error.rs  mod.rs  pagination.rs  query_log.rs  quote.rs  transaction.rs
backend/libs/lib-core/src/model/store/: mod.rs
backend/libs/lib-core/src/model/store/dbx/: error.rs  mod.rs
backend/libs/lib-core/tests/: hello_world.rs
backend/libs/lib-utils/: Cargo.toml  README.md
backend/libs/lib-utils/src/: b64.rs  envs.rs  lib.rs  time_utils.rs
backend/libs/lib-utils/tests/: hello_world.rs
backend/libs/lib-web/: Cargo.toml  README.md
backend/libs/lib-web/src/: error.rs  extractors.rs  lib.rs  rate_limit.rs
backend/libs/lib-web/src/middleware/: mod.rs  mw_ctx_require.rs  mw_ctx_resolver.rs  mw_req_stamp.rs  mw_res_map.rs
backend/libs/lib-web/tests/: hello_world.rs
backend/src/: config.rs  ctx.rs  error.rs  lib.rs  main.rs  token.rs
backend/src/db/: mod.rs  pool.rs
backend/src/handlers/: auth.rs  booking.rs  contact.rs  health.rs  mod.rs
backend/src/middleware/: mod.rs  mw_auth.rs  mw_res_map.rs
backend/src/models/: booking.rs  contact.rs  customer.rs  mod.rs  user.rs
backend/src/repositories/: booking.rs  contact.rs  customer.rs  mod.rs  user.rs
frontend/: Cargo.toml  Trunk.toml  app.rs  index.html  lib.rs  main.rs  routes.rs  stripe.rs  test_app.txt
frontend-leptos/: .env.example  Cargo.toml  README.md  check_output.txt  input.css  package.json  tailwind.config.js
frontend-leptos/public/: robots.txt  sitemap.xml  xftradesmen.css
frontend-leptos/public/css/: xftradesmen.css  xftradesmen.v2.css
frontend-leptos/public/js/: scroll-animation.js
frontend-leptos/src/: design_system.rs  lib.rs  main.rs
frontend-leptos/src/api/: contact.rs  mod.rs  stripe.rs
frontend-leptos/src/components/: error_boundary.rs  layout.rs  mod.rs  seo.rs  service_map.rs
frontend-leptos/src/components/ui/: badge.rs  button.rs  card.rs  feature_list.rs  mod.rs  section.rs
frontend-leptos/src/context/: mod.rs
frontend-leptos/src/pages/: about.rs  contact.rs  coventry.rs  electrician.rs  faq.rs  handyman.rs  home.rs  industries.rs  mod.rs  not_found.rs  packages.rs  plumber.rs  pricing.rs  terms.rs
frontend-leptos/src/pages/blog/: article.rs  data.rs  index.rs  mod.rs
frontend-leptos/src/pages/blog/content/: building-trust-online.html  local-seo-guide.html  why-tradesmen-need-websites.html
frontend-leptos/src/pages/examples/: handyman.rs  mod.rs
frontend-leptos/src/pages/examples/handyman_app/: booking.rs  components.rs  features.rs  home.rs  layout.rs  mod.rs  service_detail.rs  services.rs  testimonials.rs
frontend-leptos/src/pages/examples/handyman_app/components/: layout.rs  lead_capture.rs  mobile_bar.rs  mod.rs  trust_signals.rs
frontend-leptos/src/pages/examples/handyman_app/pages/: mod.rs
frontend-leptos/src/pages/examples/handyman_app/pages/admin/: dashboard.rs  mod.rs
frontend-leptos/src/pages/examples/handyman_app/pages/booking/: booking.rs  customers.rs  emergency.rs  mod.rs  quote.rs
frontend-leptos/src/pages/examples/handyman_app/pages/content/: blog.rs  contact.rs  faq.rs  legal.rs  mod.rs  other.rs  testimonials.rs
frontend-leptos/src/pages/examples/handyman_app/pages/main/: areas.rs  features.rs  home.rs  mod.rs  service_detail.rs  servicemap.rs  services.rs
frontend-leptos/src/pages/examples/handyman_app/pages/services/: furniture_assembly.rs  mod.rs  mounting.rs  plumbing.rs
frontend-leptos/src/pages/info/: faq.rs  mod.rs
frontend-leptos/src/pages/legal/: mod.rs  service_agreement.rs  terms.rs
frontend-leptos/src/pages/locations/: handyman.rs  mod.rs
frontend-leptos/src/pages/main/: about.rs  contact.rs  home.rs  industries.rs  mod.rs
frontend-leptos/style/: base.css  components.css  main.css  tailwind.css  utilities.css
frontend/api/: mod.rs
frontend/components/: mod.rs  nav.rs
frontend/contexts/: auth.rs  mod.rs
frontend/pages/: booking.rs  booking.rs.bak  contact.rs  experience.rs  home.rs  login.rs  map.rs  map.rs.backup  map_leaflet_backup.rs  mod.rs  register.rs
mobile-app/src-tauri/: Cargo.toml  tauri.conf.json
mobile-app/src-tauri/capabilities/: default.json
mobile-app/src-tauri/src/: main.rs
shared/: Cargo.toml  README.md  lib.rs
shared/src/: error.rs  lib.rs  metadata.rs  newtypes.rs  validation.rs
shared/src/schema/: blog_post.rs  faq.rs  mod.rs  organization.rs  service.rs
shared/src/types/: api.rs  auth.rs  contact.rs  mod.rs  product.rs
(+65 files in other folders)
