# Handyman Marketplace - Workspace Root Configuration
#
# This is a Cargo workspace that organizes the handyman marketplace project into three crates:
# 1. backend  - Axum web server with PostgreSQL database
# 2. frontend - Yew WebAssembly single-page application
# 3. shared   - Common types shared between backend and frontend
#
# Workspace benefits:
# - Shared dependencies across crates (defined once, used everywhere)
# - Unified build process (cargo build builds everything)
# - Consistent versioning across all crates
# - Single target directory for faster builds

[workspace]
members = [
    "backend",   # Axum API server (native Rust)
    "frontend",  # Yew WASM frontend (compiles to WebAssembly)
    "shared",    # Shared types (compiles twice: native + WASM)
]
resolver = "2"  # Use Cargo's new feature resolver (recommended for workspaces)

[workspace.package]
version = "0.1.0"
edition = "2021"  # Rust 2021 edition (latest stable features)
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Shared dependencies used by multiple crates
# By defining here, version stays consistent across backend/frontend/shared

# --- Serialization (Backend + Frontend + Shared) ---
serde = { version = "1.0", features = ["derive"] }  # JSON serialization with derive macros
serde_json = "1.0"  # JSON parsing and generation

# --- Backend Dependencies (Native Rust) ---
axum = "0.8.0"  # Web framework built on tokio and hyper
tokio = { version = "1.0", features = ["full"] }  # Async runtime (full features)
tower = "0.5"  # Middleware and service abstractions
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }  # HTTP middleware (CORS, etc.)
tracing = "0.1"  # Structured logging framework
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # Log output handling

# --- Frontend Dependencies (WebAssembly) ---
yew = { version = "0.21", features = ["csr"] }  # React-like framework for WASM (client-side rendering)
yew-router = "0.18"  # Client-side routing for single-page apps
wasm-bindgen = "0.2"  # Rust ↔ JavaScript interop layer
wasm-bindgen-futures = "0.4"  # Convert JS Promises to Rust Futures
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement", "Window"] }  # Browser API bindings
js-sys = "0.3"  # JavaScript standard library bindings (Array, Object, etc.)
gloo = "0.11"  # High-level WASM utilities (timers, storage, etc.)
gloo-net = { version = "0.6", features = ["http"] }  # HTTP client for WASM
