# Backend Crate - Handyman Marketplace API Server
#
# This is the backend API server built with Axum and PostgreSQL.
# It handles authentication, bookings, contact forms, and user management.
#
# Architecture:
# - Axum 0.8 for HTTP routing and handlers
# - PostgreSQL with bb8 connection pooling
# - JWT authentication with HMAC-SHA256
# - Repository pattern for database access
# - Middleware for auth and response mapping

[package]
name = "backend"
version.workspace = true   # Inherits version from workspace root
edition.workspace = true   # Rust 2021 edition
authors.workspace = true
license.workspace = true

# Multiple binary targets for different purposes
[[bin]]
name = "backend"
path = "src/main.rs"  # Main API server (cargo run --bin backend)

[[bin]]
name = "init_db"
path = "src/bin/init_db.rs"  # Initialize database schema (cargo run --bin init_db)

[[bin]]
name = "create_db"
path = "src/bin/create_db.rs"  # Create database (cargo run --bin create_db)

[dependencies]
# --- Workspace Dependencies (versions defined in root Cargo.toml) ---
serde.workspace = true          # JSON serialization
serde_json.workspace = true     # JSON parsing
axum.workspace = true           # Web framework
tokio.workspace = true          # Async runtime
tower.workspace = true          # Middleware abstractions
tower-http.workspace = true     # HTTP middleware (CORS, tracing)
tracing.workspace = true        # Structured logging
tracing-subscriber.workspace = true  # Log configuration

# --- Database (PostgreSQL) ---
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }  # Async PostgreSQL client
bb8 = "0.8"           # Generic connection pool
bb8-postgres = "0.8"  # PostgreSQL adapter for bb8 pool

# --- Date/Time ---
chrono = { version = "0.4", features = ["serde"] }  # Date and time handling (created_at, updated_at)

# --- Configuration & Environment ---
dotenvy = "0.15"  # Load environment variables from .env file

# --- Error Handling ---
anyhow = "1.0"     # Convenient error handling with context
thiserror = "1.0"  # Derive macros for custom error types

# --- Async Utilities ---
async-trait = "0.1"  # Async methods in traits (for repository pattern)

# --- Type Utilities ---
strum_macros = "0.26"  # Enum utilities (Display, FromStr, etc.)
uuid = { version = "1.0", features = ["v4", "serde"] }  # UUIDs for token salts

# --- Authentication & Security ---
tower-cookies = "0.11"  # Cookie management for JWT tokens
hmac = "0.12"           # HMAC for JWT signatures
sha2 = "0.10"           # SHA-256 hashing (for HMAC and passwords)
base64 = "0.22"         # Base64 encoding for JWT tokens

# --- Local Workspace Crates ---
shared = { path = "../shared" }  # Shared types (BookingForm, ContactForm, etc.)
