[workspace]
members = [
    "apps/api",
    "libs/lib-core",
    "libs/lib-utils",
    "libs/lib-web",
    "libs/lib-auth",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

axum = "0.8.0"
axum-extra = "0.9"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tower-cookies = "0.11"
tower_governor = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

shared = { path = "../shared" }
lib-core = { path = "libs/lib-core" }
lib-utils = { path = "libs/lib-utils" }
lib-web = { path = "libs/lib-web" }
lib-auth = { path = "libs/lib-auth" }

time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
strum_macros = "0.26"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"

hmac = "0.12"
sha2 = "0.10"

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "time", "rust_decimal"] }
bb8 = "0.8"
bb8-postgres = "0.8"
clap = { version = "4.5", features = ["derive"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
lettre = { version = "0.11", features = ["smtp-transport"] }
async-stripe = { version = "0.28", features = ["runtime-tokio-hyper-rustls-webpki"] }

derive_more = "0.99"
serde_with = "3.11"
log = "0.4"
env_logger = "0.11"
config = "0.14"
num-traits = "0.2"
rust_decimal = { version = "1.35", features = ["serde-with-float"] }

jsonwebtoken = "9.3"
argon2 = "0.5"
