[package]
name = "frontend-leptos"
version = "0.1.0"
edition = "2021"

[lib]
name = "frontend_leptos"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "frontend-leptos"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.8.15", features = ["nightly"] }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.11", features = ["nightly"] }
leptos-use = { version = "0.17.0" }
leptos_config = { version = "0.8" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.48", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = [
    "fs",
    "cors",
    "trace",
    "set-header",
], optional = true }
axum = { version = "0.8", optional = true }
leptos_axum = { version = "0.8", optional = true }

reqwest = { version = "0.12", features = ["json"], optional = true }
gloo-net = { version = "0.6", features = ["http"], optional = true }
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-storage = "0.3"

tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
simple_logger = { version = "5.0", optional = true }
log = "0.4"

wasm-bindgen = "=0.2.106"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3.81", features = [
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Window",
    "Document",
    "Location",
    "MouseEvent",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }

shared = { path = "../shared" }
leptos-leaflet = "0.10.2"

[features]
default = ["ssr"]
ssr = [
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:axum",
    "dep:leptos_axum",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:simple_logger",
    "dep:reqwest",
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
]
hydrate = ["leptos/hydrate", "dep:gloo-net"]
