[package]
name = "xftradesmen-mobile"
version = "1.0.0"
edition = "2021"
description = "XFTradesmen mobile app wrapper"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
