[package]
name = "lib-auth"
version.workspace = true
edition.workspace = true

[dependencies]
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
argon2 = { workspace = true }

[lints]
workspace = true
