[package]
name = "lib-utils"
version.workspace = true
edition.workspace = true

[dependencies]
# Time utilities
time = { workspace = true }

# Base64 encoding
base64 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

[lints]
workspace = true
